2008-10-28 İşbaran Akçayır <isbaran@gmail.com>
* src/sqlitedatabase.cpp added a few debug statements
* src/mainwindow.cpp check if qsettings settings exists before using them

2008-10-25 İşbaran Akçayır <isbaran@gmail.com>
* src/mainwindow.cpp remember window size

2008-10-24 İşbaran Akçayır <isbaran@gmail.com>
* src/sqlitedatabase.cpp Added functionality to add new databases
* src/searcherthread.cpp Instead of deleting on/off db objects, use the
present ones
* ui/configWindow.ui increase history to 1500 words

2008-03-27 Uğur Çetin <jnmbk@users.sourceforge.net>

* src/seslisozluk.cpp (SesliSozluk::continueSearch): Work with new seslisozluk.