@@ -1,3 +1,7 @@
+2008-11-17 Uğur Çetin <jnmbk@users.sourceforge.net>
+* Fixed a bug that caused crash when searching while history count is set to 0
+by hand or by a defective update
+
 2008-10-28 İşbaran Akçayır <isbaran@gmail.com>
 * src/sqlitedatabase.cpp added a few debug statements
 * src/mainwindow.cpp check if qsettings settings exists before using them
@@ -12,5 +16,4 @@ present ones
 * ui/configWindow.ui increase history to 1500 words
 
 2008-03-27 Uğur Çetin <jnmbk@users.sourceforge.net>
-
 * src/seslisozluk.cpp (SesliSozluk::continueSearch): Work with new seslisozluk.
